public/stylesheets/iphone_stylesheet.css
body
{
	font: 10pt Arial; width: 320px;
}

a       { text-decoration: none; }
a:hover { color: red; text-decoration: underline; }

textarea { font: 14pt Arial; }

.moduletitle
{
	font-weight: normal; font-size: 14pt;
	margin-left: 2px; margin-top: 4px; margin-bottom: 5px
}

.modulesubtitle
{
	font-weight: normal; font-size: 12pt;
	margin-left: 4px; margin-top: 4px; margin-bottom: 5px
}

#notice
{
	background-color: #AAFFAA;
	z-index: 3;
	padding: 5px;
	border: solid 1px green;
}       

#error
{
	background-color: #FFAAAA;
	z-index: 3;
	padding: 5px;
	border: solid 1px red;
}

#menu
{
	margin-bottom: 5px;
}

#menu .menuitem
{
	text-align: center;
	margin-top: 1px;
	background-color: #888888;
	color: white;
	width: 55px;
	display: inline-block;
}

#menu .tripmenuitem
{
	text-align: center;
	margin-top: 1px;
	background-color: #0000DD;
	color: white;
	width: 55px;
	display: inline-block;
}

#menu .locationmenuitem
{
	text-align: center;
	margin-top: 1px;
	background-color: #00DD00;
	color: white;
	width: 55px;
	display: inline-block;
}

#menu .speciesmenuitem
{
	text-align: center;
	margin-top: 1px;
	background-color: #DD0000;
	color: white;
	width: 55px;
	display: inline-block;
}

#menu a
{
	color: white;
	text-decoration: none;
}

#pagetitle
{
	font: 14pt Arial;
	padding-bottom: 5px;
}

#pageheader
{
	padding-top: 2px;
	padding-bottom: 2px;
}

.pageheaderitem
{
	margin-left: 7px; margin-right: 15px; margin-bottom: 2px;
}
        
.pagecontentmodule .photo
{
	text-align: center; display: inline;
}

#photos
{
}

#photos .photo
{
	padding-bottom: 5px; display: inline;
}

#pagecontent
{
	background-color: white;
}

#pagecontent .pagecontentmodule
{
	margin-top: 5px;
	margin-bottom: 10px;
	margin-right: 10px;
}

#pagecontent .pagecontentitem
{
	margin-left: 10px; margin-bottom: 1px;
}

#pagecontent .pagecontentitem .notes
{
	margin-left: 5px; margin-bottom: 1px; margin-top: 5px; margin-right: 10px;
}

